feat: migrated application to spring boot with web and swagger